--- a/webroot/mobile/css/style.css
+++ b/webroot/mobile/css/style.css
@@ -1329,12 +1329,12 @@ box-align:center;-webkit-box-align:center;}
 .chatbottom .chatcon input{width:5rem;}
 .over-meet{position: fixed;bottom:80px;left:0;width:40px;height:40px;background: rgba(0,0,0,.6);color:#f2f2f2;text-align: center;line-height: 16px;padding-top:4px;}
 /*活动详情修改*/
-.a_fixed_group{position: fixed;width:100%;max-width: 750px;bottom:0;}
+.a_fixed_group{position: fixed;width:100%;max-width: 750px;bottom:0;z-index:999;}
 .a_fixed_group .bottombtn .l-btn,.a_fixed_group .bottombtn .r-btn{display: block;width:50%;text-align: center;height:45px;line-height: 45px;font-size: 15px;color:#fff;}
 .a_fixed_group .bottombtn .l-btn{background:#0083fb;}
 .a_fixed_group .bottombtn .r-btn{background: #b71c2d;}
-.a_fixed_group .entrol_group{background: #fff;text-align: center;color:#B71C2D;border-top:1px #eaabb2 solid;-webkit-transform: translateY(135px);transform: translateY(135px);position: relative;z-index:1;transition: all .1s ease-in;background: #f4f4f4;}
-.a_fixed_group .hide_group{-webkit-transform: translateY(0px);transform: translateY(0px);transition: all .1s ease-in;background: #f4f4f4;}
+.a_fixed_group .entrol_group{background: #fff;text-align: center;color:#B71C2D;border-top:1px #eaabb2 solid;-webkit-transform: translateY(135px);transform: translateY(135px);position: relative;z-index:1;transition: all .1s ease-in;background: #f4f4f4;max-height:0;}
+.a_fixed_group .hide_group{-webkit-transform: translateY(0px);transform: translateY(0px);transition: all .1s ease-in;background: #f4f4f4;max-height: 999px;}
 .a_fixed_group .bottombtn{position: relative;z-index:2;height:45px;}
 .a_fixed_group .entrol_group .choose_num{height:45px;font-size: 14px;line-height: 45px;border-bottom:1px #eaabb2 solid;display: block;color:#B71C2D;}
 .sing-up .choose_cooper{height:.8rem;font-size: .28rem;color:#999;}
