--- a/webroot/mobile/css/style.css
+++ b/webroot/mobile/css/style.css
@@ -1070,7 +1070,7 @@ background-size:3.82rem 1.9rem;margin-top:1rem;}
 .btnlist a:nth-of-type(3) i{background: url(img/ba.png) no-repeat;width:0.4rem;height:0.32rem;background-size: contain;}
 .dialogue{width:100%;padding-top:0.4rem;}
 .dialogue ul{padding:0 0.3rem;overflow:hidden;}
-.dialogue li{max-width: 80%;margin-top:0.3rem;display:block;clear:both;}
+.dialogue li{margin-top:0.3rem;display:block;clear:both;overflow: hidden;}
 .dialogue li span,.dialogue li time{display: block;}
 .dialogue li time{font-size:12px;color:#b71c2d;margin-top:0.1rem;}
 .dialogue li.fl time{text-align: left;text-indent: 0.2rem;color:#333;}
@@ -1312,13 +1312,14 @@ box-align:center;-webkit-box-align:center;}
 .invoic_dialog_footer .quitbtn{background: #7a7e83;margin-right:.36rem;}
 .invoic_dialog_footer .surebtn{background: #b71c2c;}
 .dialog_inner{background: #fff;border-radius: .2rem;}
-.dialogue .chatbox .avatar{width:1.3rem;height:1.3rem;overflow: hidden;border-radius: 50%;}
-.dialogue .fr .chatbox a{color:#fff;text-decoration: underline;}
-.dialogue .fl .chatbox a{color:#B71C2D;text-decoration: underline;margin-right:.2rem;}
-.dialogue .fr .chatbox .avatar{margin-left:10px;}
-.dialogue .fl .chatbox .avatar{margin-right:10px;}
+.chatlist  .chatbox .avatar{width:1.3rem;height:1.3rem;overflow: hidden;border-radius: 50%;}
+.chatlist  .fr  a{color:#fff;text-decoration: underline;}
+.chatlist .fl  a{color:#B71C2D;text-decoration: underline;margin-right:.2rem;}
+.chatlist  .fr  .avatar{margin-left:10px;}
+.chatlist .fl .avatar{margin-right:10px;}
+.chatlist .fl span{background: #fff;color:#303030;}
 .chatbox .avatar img{width:100%;height:100%;display: block;}
-.dialogue  .chatbox .chat_text{max-width: 5rem;}
+.chatlist   .chatbox .chat_text{max-width: 5rem;}
 .dialogue .desc{text-align: center;clear:both;}
 .dialogue .desc time{color:#d2d2d2;font-size: 13px;margin:.2rem 0;display: inline-block;}
 .dialogue .desc span{padding:.1rem .2rem;background: #ccc;color:#fff;border-radius: 5px;display: inline-block;margin:.2rem 0;}
