--- a/webroot/mobile/css/style.css
+++ b/webroot/mobile/css/style.css
@@ -1372,9 +1372,9 @@ box-align:center;-webkit-box-align:center;}
 .meet_search_box .rico .num{position: absolute;right:-5px;top:2px;width:12px;height:12px;border-radius: 50%;background: #fff;font-size: 7px;color:#B71C2D;text-align: center;line-height: 12px;}
 .chatinfo_list{background: #fff;}
 .chatinfo_list li{border-bottom:1px #e5e5e5 solid;padding:0.2rem .3rem;}
-.chatinfo_list li .avatar{width:1.12rem;height:1.12rem;position:absolute;overflow:hidden;border-radius: 50%;}
+.chatinfo_list li .avatar{width:1.12rem;height:1.12rem;position:absolute;border-radius: 50%;}
 .chatinfo_list li .avatar .num{position:absolute;width:14px;height:14px;background: #B71C2D;color:#fff;right:0;top:0;border-radius: 50%;color:.2rem;line-height: 14px;text-align: center;}
-.chatinfo_list li .avatar img{width:100%;height:100%;display: block;}
+.chatinfo_list li .avatar img{width:100%;height:100%;display: block;border-radius: 50%;}
 .chatinfo_list li .l_info{height:1.12rem;}
 .chatinfo_list li .l_text{padding-left:1.22rem;padding-top:.1rem;}
 .chatinfo_list li .l_text .title{max-width:4rem;line-height: .3rem;}
