--- a/webroot/mobile/css/style.css
+++ b/webroot/mobile/css/style.css
@@ -1375,11 +1375,11 @@ box-align:center;-webkit-box-align:center;}
 .chatinfo_list li .avatar{width:1.12rem;height:1.12rem;position:absolute;border-radius: 50%;}
 .chatinfo_list li .avatar .num{position:absolute;width:14px;height:14px;background: #B71C2D;color:#fff;right:0;top:0;border-radius: 50%;color:.2rem;line-height: 14px;text-align: center;}
 .chatinfo_list li .avatar img{width:100%;height:100%;display: block;border-radius: 50%;}
-.chatinfo_list li .l_info{height:1.12rem;}
+.chatinfo_list li .l_info{height:1.12rem;max-width:86%;}
 .chatinfo_list li .l_text{padding-left:1.22rem;padding-top:.1rem;}
 .chatinfo_list li .l_text .title{max-width:4rem;line-height: .3rem;}
 .chatinfo_list li .title span{font-size: .22rem;color:#999;margin-left:.2rem;}
-.chatinfo_list li .cont{font-size: .22rem;color:#666;}
+.chatinfo_list li .cont{font-size: .22rem;color:#666;line-height: .3rem;}
 .chatinfo_list li .company{font-size: .22rem;color:#666;display: block;line-height: .46rem;}
-.chatinfo_list li .cont .iconfont{color:#B71C2D;margin-right:.05rem;font-size: .24rem;}
+.chatinfo_list li .cont .iconfont{color:#B71C2D;margin-right:.05rem;font-size: .24rem;margin-left:2px;}
 .chatinfo_list li .r_info{color:#999;font-size: .22rem;}
