--- a/webroot/mobile/css/style.css
+++ b/webroot/mobile/css/style.css
@@ -1367,7 +1367,7 @@ box-align:center;-webkit-box-align:center;}
 .meet_search_box{background: #B71C2D;height:68px;position: fixed;top:0;width:100%;max-width: 750px;z-index: 999;padding-top:20px;}
 .meet_search_box .search-content{width:6rem;height:28px;background: #fff;border-radius: 15px;line-height: 28px;padding-left:8px;}
 .meet_search_box .search-content .iconfont{color:#B71C2D;}
-.meet_search_box .rico{color:#e2a4ab;margin-left:15px;font-size: 20px;width:20px;height:28px;line-height: 28px;position: relative}
+.meet_search_box .rico{color:#fff;margin-left:15px;font-size: 20px;width:20px;height:28px;line-height: 28px;position: relative}
 .meet_search_box .rico .iconfont{font-size: 20px;display:block;}
 .meet_search_box .rico .num{position: absolute;right:-5px;top:2px;width:12px;height:12px;border-radius: 50%;background: #fff;font-size: 7px;color:#B71C2D;text-align: center;line-height: 12px;}
 .chatinfo_list{background: #fff;}
