--- a/webroot/mobile/css/common.css
+++ b/webroot/mobile/css/common.css
@@ -69,6 +69,7 @@ table,tbody,tr,td,th,thead,tfoot{border:1px #e5e5e5 solid;}
 .ld1:after{height:200%;width:1px;top:0;left:0;content:"";-webkit-transform:scale(0.5);-webkit-transform-origin:0 0;transform:scale(0.5);transform-origin:0 0;background: #e5e5e5;position:absolute;}
 .rd1:before{height:200%;width:1px;top:0;right:0;content:"";-webkit-transform:scale(0.5);-webkit-transform-origin:0 0;transform:scale(0.5);transform-origin:0 0;background: #e5e5e5;position:absolute;}
 /*--主题背景色--*/
+
 .eleblock{display: block;}
 .bggray{background: #7a7d82;}
 .bgred{background: #e01a48;}
@@ -91,6 +92,7 @@ table,tbody,tr,td,th,thead,tfoot{border:1px #e5e5e5 solid;}
 .wraper .col_g{color:#00bc6f;}
 .wraper .col_p{color:#ff8897;}
 .wraper .col_t{color:#60bcff;}
+.wraper .color_qg{color:#009899;}
 .wraper .col_darkblue{color:#2b4660;}
 .wraper .col_yellow{color:#f19715;}
 .wraper .bgff{background: #fff;}
@@ -131,13 +133,13 @@ input::-webkit-input-placeholder { /* WebKit browsers */ color: #7a7d82; }
 	/*display: -webkit-flex;display: flex;-webkit-justify-content: center;justify-content: center;-webkit-align-items:center;align-items: center;*/}
 .alert span{line-height: 0.38rem;text-align: center;background: rgba(0,0,0,0.8);border-radius: 0.15rem;padding:0.3rem;display:block;}
 /*web字体图标*/
-@font-face {font-family: 'iconfont';
+/*@font-face {font-family: 'iconfont';
     src: url('../font/iconfont.eot'); 
     src: url('../font/iconfont.eot?#iefix') format('embedded-opentype'), 
     url('../font/iconfont.woff') format('woff'),
    	url('../font/iconfont.ttf') format('truetype'), 
    	url('../font/iconfont.svg#iconfont') format('svg'); 
-}
+}*/
 
 .iconfont{
     font-family:"iconfont" !important;
@@ -146,15 +148,14 @@ input::-webkit-input-placeholder { /* WebKit browsers */ color: #7a7d82; }
     -webkit-text-stroke-width: 0.2px;
     -moz-osx-font-smoothing: grayscale;}
   /*线上字体图标*/  
-/*@font-face {
-  font-family: 'iconfont'; 
-  src: url('//at.alicdn.com/t/font_79w2asgkf8lx47vi.eot');
-  src: url('//at.alicdn.com/t/font_79w2asgkf8lx47vi.eot?#iefix') format('embedded-opentype'),
-  url('//at.alicdn.com/t/font_79w2asgkf8lx47vi.woff') format('woff'),
-  url('//at.alicdn.com/t/font_79w2asgkf8lx47vi.ttf') format('truetype'),
-  url('//at.alicdn.com/t/font_79w2asgkf8lx47vi.svg#iconfont') format('svg');
+@font-face {
+  font-family: 'iconfont';  /* project id 122700 */
+  src: url('//at.alicdn.com/t/font_bax4q0hihllq5mi.eot');
+  src: url('//at.alicdn.com/t/font_bax4q0hihllq5mi.eot?#iefix') format('embedded-opentype'),
+  url('//at.alicdn.com/t/font_bax4q0hihllq5mi.woff') format('woff'),
+  url('//at.alicdn.com/t/font_bax4q0hihllq5mi.ttf') format('truetype'),
+  url('//at.alicdn.com/t/font_bax4q0hihllq5mi.svg#iconfont') format('svg');
 }
-                                         */
                     
 /*header*/
 header{width:100%;height:0.8rem;position:relative;left:0;top:0;background:#b71c2d;border-bottom:1px #a8a7ab solid;overflow:hidden;z-index:999;}
@@ -172,6 +173,7 @@ footer .othertype img,.wxlogin .othertype img{width:100%;height:auto;display:blo
 .navfooter .active span,.navfooter .active a{color:#db1f4f;}
 .pd10{padding-bottom:1rem;padding-top:0;}
 .wraper .colore01{color:#b71c2d;}
+.responseimg{width:100%;height:100%;display: block;}
 /*animate css*/
 /*moveup*/
 @-webkit-keyframes moveup {from { }to { -webkit-transform: translateY(-100px);transform: translateY(-100px);}}
@@ -219,3 +221,10 @@ header{display:none;}
 /*@-webkit-keyframes infinites{from{transform:scale(1);} to{transform:scale(0.8);}}
 @keyframes infinites{from{transform:scale(1);} to{transform:scale(0.8);}}
 .infinite{-webkit-animation: infinites .8s infinite alternate ease-in-out;animation: infinites .8s infinite alternate ease-in-out;-webkit-animation-fill-mode:forwards;animation-fill-mode:forwards;}*/
+/**/
+.r-ico{color:#999;font-size: 14px;}
+.list-line{overflow: hidden;clear:both;}
+.list-line li{float:left;}
+.outerblock{overflow: hidden;}
+.outerblock li{border-bottom:1px #efefef solid;padding:0 .3rem;}
+.outerblock li:last-of-type{border-bottom: none;}
