--- a/webroot/mobile/css/style.css
+++ b/webroot/mobile/css/style.css
@@ -97,7 +97,7 @@ outline:none;height:0.8rem;line-height: 0.78rem;}
 .reg-sucess p{margin-bottom: .5rem;font-size:0.3rem;color:#222c38;}
 /*news --start--*/
 .inner .news-serch{ width:0.32rem;height:0.32rem;font-size:0.32rem;top:0.29rem;}
-.a-banner{width:100%;height:3.8rem;position:relative;}
+.a-banner{width:100%;height:2.45rem;position:relative;}
 .a_banner_title{position:absolute;bottom:0;height:32px;background: rgba(0,0,0,.6);color:#fff;width:100%;text-indent: .3rem;line-height: 30px;}
 .a_banner_title h3{font-size:14px;}
 .a-search-box{position:fixed;top:0.6rem;width:100%; padding:0 0.68rem;z-index:3;max-width:750px;}
@@ -110,8 +110,8 @@ outline:none;height:0.8rem;line-height: 0.78rem;}
 .a-search .s-con input{/*font-size:0.3rem;height:0.6rem;line-height:0.6rem;*/background: none;border:none;color:#fff;width:90%;line-height:30px;display:block;height:30px;font-size:14px;padding:0;}
 .pic-list-container{width:2000%;position:relative;overflow:hidden;}
 .pic-list-container li{width:7.5rem;float:left;/*height:2.95rem;*/}
-.pic-list-container li a{display: block;width:100%;height:3.8rem;overflow:hidden;}
-.pic-list-container li img{width:100%;height:3.8rem;display: block;}
+.pic-list-container li a{display: block;width:100%;height:2.45rem;overflow:hidden;}
+.pic-list-container li img{width:100%;height:2.45rem;display: block;}
 .a-banner .yd{position:absolute;bottom:0;width:100%;height:30px;display:-webkit-flex;display: flex;
 -webkit-justify-content:  center; justify-content: center;padding-right:20px;}
 .a-banner .yd span{width:6px;height:6px;border-radius: 50%;background: #929292;display: inline-block;margin:12px 3px;}
@@ -148,9 +148,9 @@ outline:none;height:0.8rem;line-height: 0.78rem;}
 .sec-b-r a{display: inline-block;color:#969fa9;padding:2px 5px;font-size:10px;border:1px #969fa9 solid;border-radius: 5px;}
 
 .footer{border-top:1px #e5e5e5 solid; padding-top:0.2rem;padding-bottom:0.1rem; background: #f7f7f8;height:1.2rem;overflow:hidden;}
-.navfooter li{float:left;width:25%;text-align: center;}
+.navfooter li{float:left;width:20%;text-align: center;}
 .navfooter li span{display: block;line-height:0.48rem;font-size:0.44rem;color:#7a7e83;margin-bottom:.1rem;}
-.navfooter li a{display: block;line-height: 0.32rem;color:#7a7e83; text-align: center;}
+.navfooter li a{display: block;line-height: 0.32rem;color:#7a7e83; text-align: center;font-size:.26rem;}
 .navfooter li:hover span,.navfooter li:hover a{color:#dd204b;}
 /*.firstnews:after{content:'置顶';color:#dd204b;position:absolute;right:0.1rem;top:0;line-height: 0.5rem;}*/
 .firstnews{position: absolute;top:0;color:#fff;font-size: 10px;width:15px;height:32px;background: #DB1F4F;display: block;line-height: 15px;text-align: center;}
@@ -370,7 +370,7 @@ border-bottom:none;top:-1px;margin-top:-1px;margin-left:-1px;}
 .allmenu::-webkit-scrollbar,.dk ul::-webkit-scrollbar,.outerbox::-webkit-scrollbar{display: none;}
 .sele-r{float:right;background: url(img/right.png) no-repeat;width:0.16rem;height:0.25rem;background-size: cover;}
 .menulist a{width:25%;text-align: center;font-size:0.28rem;float:left;overflow:hidden;padding:.2rem 0;color:#606060;}
-.menulist a span{line-height: 0.48rem;display: block;font-size:0.28rem;color:#222c38;font-weight: 100;}
+.menulist a span{line-height: 0.48rem;display: block;font-size:0.28rem;color:#222c38;}
 .menulist a i{display: block; font-size:0.5rem;margin:0 auto;height:.56rem;line-height: .56rem;color:#b71c2d;
 }
 .a_menusort a i{font-size:.58rem;height:.6rem;line-height: .6rem;}
@@ -691,7 +691,7 @@ background: url(img/mbg.jpg) repeat-x;background-size: contain;}
 /*个人中心--2end*/
 .myhome,.myhome-h{background: #dd204b;position:fixed;}
 .myhome-h{height:3.6rem;}
-.h-home-bottom{padding:0.3rem 0 0.2rem;
+.h-home-bottom{padding:0.3rem 0 0.4rem;
 /*display: -webkit-flex; display: flex;
 -webkit-justify-content: center;justify-content: center;
 -webkit-align-items: center;  align-items: center;
@@ -699,13 +699,13 @@ background: url(img/mbg.jpg) repeat-x;background-size: contain;}
 color:#fff;background: #b71c2d;}
 .c-padding{padding:0.9rem 0 0.2rem;}
 .h-home-bottom h4{text-align: center;padding:0.1rem 0;}
-.h-home-bottom div.t-home-top span,.m-pic span{/*width:2.4rem;height:2.4rem;*/display:inline-block;position:relative;background-color: #fff;
+.h-home-bottom div.t-home-top span,.m-pic span{/*width:2.4rem;height:2.4rem;*/display:inline-block;position:relative;
 border-radius: 50%;}
 .info-desc{font-size:0;color:#fff;text-align: center;}
 .todo{text-align: center;margin-top:.1rem;}
 .todo a{color:#fff;border:1px #fff solid;padding:0.2rem;border-radius: .3rem;display: inline-block;}
-.info-desc span{display:block;font-size:0.3rem;line-height:0.46rem;}
-.info-desc span:first-of-type{}
+.info-desc span{font-size:0.28rem;line-height:0.3rem;}
+.info-desc span:first-of-type{margin-right: .1rem;}
 .info-desc span i{margin-right: 0.1rem;font-size:.3rem;}
 
 /*.h-home-bottom div.t-home-top span:before{position:absolute;content: '';width:2.8rem;height:2.8rem;border:0.05rem #e3315b solid;left:-0.25rem;top:-0.25rem;border-radius: 1.4rem;}*/
@@ -713,7 +713,7 @@ border-radius: 50%;}
 .h-home-bottom div.t-home-top{text-align: center;position:relative;margin-bottom:0.2rem;}
 .h-home-bottom div.t-home-top a{display: inline-block;}
 .h-home-bottom h3 .v{background: url(img/v.png) no-repeat;width:0.32rem;height:0.32rem;background-size:.3rem .3rem;display: inline-block;}
-.h-home-bottom div.t-home-top span img{width:2.31rem;height:2.31rem;display: block;border-radius: 50%;margin: 0.04rem;}
+.h-home-bottom div.t-home-top span img{width:1.9rem;height:1.9rem;display: block;border-radius: 50%;}
 .h-home-bottom h3 i{font-size:0.32rem;margin-left:0.05rem;color:#fff;vertical-align: middle;}
 .h-home-bottom h3{font-size:0.36rem;line-height: 0.4rem;margin-bottom:0.1rem;color:#fff;text-align: center;font-weight: bold;text-indent: 0.2rem;}
 .h-home-bottom h3 span{display: block;font-size:0.3rem;line-height: 0.4rem;}
@@ -735,7 +735,7 @@ border-radius: 50%;}
 	.h-home-menu li{padding:0.32rem 0 0.32rem 1rem;}
 }*/
 .h-home-menu li:nth-of-type(n){border-left:1px #e5e5e5 solid;}
-.h-home-menu li a{color:#222c38;}
+.h-home-menu li a{color:#222c38;line-height: .32rem;}
 .h-home-menu li a i{font-size:0.32rem;color:#b71c2d;margin-right:0.23rem;vertical-align: middle;}
 .topnav li a i{display:block;background: url(img/cardcase.png) no-repeat;width:0.46rem;height:0.38rem;background-size: contain;margin-right:0;margin:0 auto;margin-bottom:0.2rem;}
 .topnav li:nth-of-type(2) a i{background: url(img/m-info.png) no-repeat;width:0.42rem;height:0.4rem;background-size: contain;}
@@ -1229,9 +1229,10 @@ background:-webkit-linear-gradient(top,#54d76a 0%,#53d66a 50%,#53d569 100%);  ba
 .m-service-con{margin-top:.6rem;}
 .m_title_des{padding:.15rem .3rem;background: #fff;}
 .m_title_des h3{/*border-left:#e01a48 solid 2px;*/padding-left:14px;line-height:.32rem;font-size: .3rem;height:.34rem;position:relative;}
-.m_title_des .title{padding-left:14px;line-height:.32rem;font-size: .3rem;height:.34rem;position:relative;display:block;}
+.m_title_des .title{padding-left:14px;line-height:.32rem;font-size: .3rem;height:.34rem;position:relative;}
 .m_title_des h3:before,.m_title_des .title:before{content: '';position:absolute;left:0;height:0;width:0;border:8px transparent solid;border-left:8px #b71c2d solid;top:50%;margin-top:-8px;}
 .m_sub-title{line-height: .34rem;}
+
 /*audio*/
 .video-js{background: #000;padding:.1rem;}
 .audio-js{background: #fff;}
@@ -1383,3 +1384,67 @@ box-align:center;-webkit-box-align:center;}
 .chatinfo_list li .company{font-size: .22rem;color:#666;display: block;line-height: .46rem;}
 .chatinfo_list li .cont .iconfont{color:#B71C2D;margin-right:.05rem;font-size: .24rem;margin-left:2px;}
 .chatinfo_list li .r_info{color:#999;font-size: .22rem;}
+/*个人中心*/
+.home-focus{text-align: center;margin-top:.1rem;}
+
+/*培训*/
+.train-search-box{height:50px;background: #fff;padding:0 .6rem;border-bottom:1px #efefef solid;position:fixed;z-index:2;overflow: hidden;}
+.train-search-box.hideseach{transform: translateY(-50px);max-height: 0;-webkit-transition: all .2s ease-in;transition: all .2s ease-in;}
+.train-search-box.showseach{transform: translateY(0);max-height: 999px;-webkit-transition: all .2s ease-in;transition: all .2s ease-in;}
+.train-search-box .search-container{margin-left:.3rem;}
+.train-search-box .search-container .searchbtn{margin-left:.2rem;display: block;}
+.train-search-box .search-container input{width:100%;height:22px;padding:0 .2rem;font-size: 13px;}
+.train-search-box .search-con{height:25px;border:1px #B71C2D solid;width:5rem;border-radius: 20px;}
+.train-con-box{}
+.train-con-contanier{width:100%;}
+.train-con-contanier .tab-con-box{display: none;}
+.train-header-box{height:50px;background: #fff;border-bottom:1px #efefef solid;position: fixed;z-index: 1;top:0;left:0;}
+.train-header{height:50px;}
+.train-header .search-ico{width:1.1rem;text-align: center;margin-right:.6rem;height:50px;line-height: 50px;}
+.train-tab-box .tab{width:2rem;text-align: center;font-size: 15px;color:#989898;}
+.train-tab-box .tab.buy{color:#009899;}
+.train-tab-box .tab.active{color:#B71C2D;}
+.train-tab-box .train-tab{position: relative;height:50px;}
+.train-tab-box .train-tab .tabline{height:3px;width:2rem;background: #B71C2D;position: absolute;bottom:0;left:0;-webkit-transition: all .1s ease-in-out;transition: all .1s ease-in-out;margin-bottom:-1px;}
+/*
+ * 订阅
+ */
+.booking-items{background: #fff;padding:.3rem;margin-bottom:.2rem;overflow: hidden;}
+.booking-items .avatar{width:.56rem;height:.56rem;overflow: hidden;border-radius: 50%;margin-right: .3rem;}
+.booking-items .nav-title{font-size: 12px;color:#707070;}
+.booking-items .con{padding-left:.86rem;}
+.booking-items .con .title{margin-top:.2rem;line-height: 16px;font-size: 14px;text-align: justify;}
+.booking-items .con p{color:#707070;font-size: 12px;line-height: 15px;margin-top:.15rem;text-align: justify;word-break: break-all;}
+.booking-items .con .price{font-size: 14px;margin-top: .3rem;}
+
+/*培训 ---02*/
+.train-items-box .title{height:1rem;border-bottom:1px #ccc solid;}
+.train-items-box .title-box{height:1rem;font-size: .32rem;line-height: 1rem;}
+.train-items-box .title-box .ico{margin-left:-5px;}
+.train-items-box .con{}
+.train-items-box .title-box .iconfont{color:#B71C2D;vertical-align: top;font-size: .3rem;}
+.train-items-box .con .pic-news{width:1.92rem;height:1.84rem;overflow: hidden;position: absolute;}
+.train-items-box .con-right-info{padding-left:2.1rem;}
+.train-items-box .train-items{height:1.82rem;overflow: hidden;}
+.train-items-box .con .con-items{padding-top:.26rem;padding-bottom:.26rem;}
+.train-items-box .train-items .nav-title{font-size: .3rem; line-height: .34rem;}
+.train-items-box .train-items .nav-desc{padding-top:.12rem;}
+.train-items-box .train-items .nav-desc p{font-size: .26rem;color:#707070;}
+.train-items-box .train-items .foot{padding-top: .3rem;}
+.train-items-box .foot .del{line-height: .4rem;}
+.train-items-box  .foot .marks{padding:.1rem .15rem;border-radius: 4px;border:1px #ccc solid;font-size: 12px;margin-top:-.12rem;}
+.trainpage{background: none;display: block;border-bottom: none;position: absolute;}
+.train-intro{width:100%;height:2.95rem;overflow: hidden;}
+.train-intro-box .con{padding:.4rem .3rem;color:#707070;}
+.train-intro-detail{padding:.2rem 0;}
+.train-intro-box .con .nav-title{line-height: .34rem;font-size:.3rem;text-align: justify;word-break: break-all;margin-bottom:.4rem;}
+.train-intro-detail .title{height:.8rem;}
+.train-intro-detail .con{padding-bottom:.2rem;}
+.train-intro-detail .con p{line-height: .36rem;}
+.courselist .avatar{width:.56rem;height:.56rem;overflow: hidden;margin-right: .3rem;}
+.courselist .course-title{font-size: .3rem;line-height: .32rem;}
+.courselist .course-title i{margin-right:.1rem;}
+.course .title{height:1rem;border-bottom:1px #efefef solid;}
+.courselist .couser-pro{padding:.2rem .3rem 0;font-size: .28rem;color:#707070;}
+.course .items{padding-top:.2rem;padding-bottom:.2rem;}
+.course .items.read{opacity: .6;}
