--- a/webroot/mobile/font/iconfont.css
+++ b/webroot/mobile/font/iconfont.css
@@ -1,10 +1,10 @@
 
 @font-face {font-family: "iconfont";
-  src: url('iconfont.eot?t=1479353353353'); /* IE9*/
-  src: url('iconfont.eot?t=1479353353353#iefix') format('embedded-opentype'), /* IE6-IE8 */
-  url('iconfont.woff?t=1479353353353') format('woff'), /* chrome, firefox */
-  url('iconfont.ttf?t=1479353353353') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
-  url('iconfont.svg?t=1479353353353#iconfont') format('svg'); /* iOS 4.1- */
+  src: url('iconfont.eot?t=1481789759536'); /* IE9*/
+  src: url('iconfont.eot?t=1481789759536#iefix') format('embedded-opentype'), /* IE6-IE8 */
+  url('iconfont.woff?t=1481789759536') format('woff'), /* chrome, firefox */
+  url('iconfont.ttf?t=1481789759536') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
+  url('iconfont.svg?t=1481789759536#iconfont') format('svg'); /* iOS 4.1- */
 }
 
 .iconfont {
@@ -12,7 +12,6 @@
   font-size:16px;
   font-style:normal;
   -webkit-font-smoothing: antialiased;
-  -webkit-text-stroke-width: 0.2px;
   -moz-osx-font-smoothing: grayscale;
 }
 
@@ -66,6 +65,8 @@
 
 .icon-icontianjia01:before { content: "\e65d"; }
 
+.icon-guanbi1:before { content: "\e6b4"; }
+
 .icon-zanting:before { content: "\e675"; }
 
 .icon-weibiaoti1:before { content: "\e6a4"; }
@@ -82,13 +83,15 @@
 
 .icon-xiayiye1:before { content: "\e608"; }
 
-.icon-guanbi1:before { content: "\e67a"; }
+.icon-shanchu:before { content: "\e6b3"; }
+
+.icon-guanbi2:before { content: "\e67a"; }
 
 .icon-fabiaowenzhang:before { content: "\e64d"; }
 
 .icon-xiaoxi1:before { content: "\e6ab"; }
 
-.icon-guanbi2:before { content: "\e67f"; }
+.icon-guanbi3:before { content: "\e67f"; }
 
 .icon-jiantou:before { content: "\e678"; }
 
@@ -105,6 +108,8 @@
 .icon-saoyisao:before { content: "\e60a"; }
 
 .icon-weixin:before { content: "\e65e"; }
+
+.icon-weixin-copy:before { content: "\e6b5"; }
 
 .icon-wodetouzi:before { content: "\e66d"; }
 
@@ -278,6 +283,8 @@
 
 .icon-xiayiye4:before { content: "\e64b"; }
 
+.icon-gengduo11:before { content: "\e6b6"; }
+
 .icon-didian1:before { content: "\e660"; }
 
 .icon-guanzhudetouziren:before { content: "\e66e"; }
@@ -324,6 +331,8 @@
 
 .icon-huiyuanfuwu:before { content: "\e691"; }
 
+.icon-shangsanjiaoxing-copy-copy-copy:before { content: "\e6af"; }
+
 .icon-binggouguwen:before { content: "\e695"; }
 
 .icon-binggourongzi:before { content: "\e696"; }
@@ -361,4 +370,16 @@
 .icon-xuanze02:before { content: "\e6a9"; }
 
 .icon-s-up-copy-copy:before { content: "\e502"; }
+
+.icon-peixun:before { content: "\e6ac"; }
+
+.icon-peixun1:before { content: "\e6ad"; }
+
+.icon-shouji:before { content: "\e6ae"; }
+
+.icon-gouwuche:before { content: "\e6b0"; }
+
+.icon-erji:before { content: "\e6b1"; }
+
+.icon-wendang:before { content: "\e6b2"; }
 
