--- a/webroot/mobile/css/style.css
+++ b/webroot/mobile/css/style.css
@@ -1475,8 +1475,10 @@ box-align:center;-webkit-box-align:center;}
 .discount-charge li:nth-of-type(3n){margin-right: 0;}
 
 .discount-charge li .items{width:100%;height:1.8rem;border:1px #e5e5e5 solid;border-radius: 4px;font-size: .4rem;color:#666;}
+.discount-charge li .items h3{font-size: .4rem;}
+.discount-charge li .items .really-count{font-size: .26rem;margin-top:.16rem;display: block;}
 .discount-charge li.active .items{border:1px #B71C2D solid;color:#B71C2D;}
-.charge-tips{position: absolute;bottom:1.2rem;width:100%;text-align: center;font-size: .26rem;color:#707070;}
+.charge-tips{position: absolute;bottom:1.2rem;width:100%;text-align: center;font-size: .26rem;color:#707070;max-width: 750px;margin:0 auto;}
 .train-account{text-align: center;height:1.7rem;line-height: 1.7rem;}
 .train-account h3{font-size: .4rem;color:#000;}
 .train-pay-box .choose-pay-box li{height:1rem;}
