--- a/webroot/mobile/font/iconfont.css
+++ b/webroot/mobile/font/iconfont.css
@@ -1,10 +1,10 @@
 
 @font-face {font-family: "iconfont";
-  src: url('iconfont.eot?t=1481789759536'); /* IE9*/
-  src: url('iconfont.eot?t=1481789759536#iefix') format('embedded-opentype'), /* IE6-IE8 */
-  url('iconfont.woff?t=1481789759536') format('woff'), /* chrome, firefox */
-  url('iconfont.ttf?t=1481789759536') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
-  url('iconfont.svg?t=1481789759536#iconfont') format('svg'); /* iOS 4.1- */
+  src: url('iconfont.eot?t=1482311268709'); /* IE9*/
+  src: url('iconfont.eot?t=1482311268709#iefix') format('embedded-opentype'), /* IE6-IE8 */
+  url('iconfont.woff?t=1482311268709') format('woff'), /* chrome, firefox */
+  url('iconfont.ttf?t=1482311268709') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
+  url('iconfont.svg?t=1482311268709#iconfont') format('svg'); /* iOS 4.1- */
 }
 
 .iconfont {
@@ -382,4 +382,14 @@
 .icon-erji:before { content: "\e6b1"; }
 
 .icon-wendang:before { content: "\e6b2"; }
+
+.icon-tupian:before { content: "\e6b7"; }
+
+.icon-shipin:before { content: "\e6b8"; }
+
+.icon-tupian1:before { content: "\e6b9"; }
+
+.icon-peixun2:before { content: "\e6ba"; }
+
+.icon-peixun3:before { content: "\e6bb"; }
 
