--- a/webroot/mobile/css/style.css
+++ b/webroot/mobile/css/style.css
@@ -1368,7 +1368,7 @@ box-align:center;-webkit-box-align:center;}
 .meet_search_box{background: #B71C2D;height:68px;position: fixed;top:0;width:100%;max-width: 750px;z-index: 999;padding-top:20px;}
 .meet_search_box .search-content{width:6rem;height:28px;background: #fff;border-radius: 15px;line-height: 28px;padding-left:8px;}
 .meet_search_box .search-content .iconfont{color:#B71C2D;margin-right:.1rem;}
-.meet_search_box .search-content{width:5rem;}
+/*.meet_search_box .search-content{width:5rem;}*/
 .meet_search_box .rico{color:#fff;margin-left:15px;font-size: 20px;width:20px;height:28px;line-height: 28px;position: relative}
 .meet_search_box .rico .iconfont{font-size: 20px;display:block;}
 .meet_search_box .rico .num{position: absolute;right:-5px;top:2px;width:12px;height:12px;border-radius: 50%;background: #fff;font-size: 7px;color:#B71C2D;text-align: center;line-height: 12px;}
@@ -1473,6 +1473,7 @@ box-align:center;-webkit-box-align:center;}
 .charge-container{background: #fff;}
 .charge-container .title{height:1rem;line-height: 1rem;font-size: .4rem;color:#000;padding:0 .3rem;}
 .charge-container .input-block{height:1rem;line-height: 1rem;border-top:1px #efefef solid;border-bottom:1px #efefef solid;text-indent:.3rem;}
+.charge-container .input-block input{width:100%;}
 .charge-container .input-disabled{background: #efefef;}
 .discount-charge .discount-title{height:1rem;line-height: 1rem;padding:.2rem 0 0;font-size: .34rem;color:#707070;}
 .discount-charge .discount-title .really-count{font-size: .3rem;margin-left:.2rem;}
