--- a/webroot/mobile/css/style.css
+++ b/webroot/mobile/css/style.css
@@ -1470,7 +1470,7 @@ box-align:center;-webkit-box-align:center;}
 .charge-box .items{height:.6rem;}
 .btn-pay{height:.8;width:100%;background: #B71C2D;line-height: .8rem;font-size: .32rem;color:#fff;border-radius: 4px;text-align: center;margin-bottom:.2rem;}
 .charge-box-hide{max-height: 0;overflow: hidden;-webkit-transition: all .2s ease-in-out;transition: all .2s ease-in-out;}
-.charge-container{background: #fff;}
+.charge-container{background: #fff;padding-bottom:.6rem;}
 .charge-container .title{height:1rem;line-height: 1rem;font-size: .4rem;color:#000;padding:0 .3rem;}
 .charge-container .input-block{height:1rem;line-height: 1rem;border-top:1px #efefef solid;border-bottom:1px #efefef solid;text-indent:.3rem;}
 .charge-container .input-block input{width:100%;}
@@ -1513,7 +1513,7 @@ box-align:center;-webkit-box-align:center;}
 .detail-course-box .title{line-height: .36rem;}
 .train-audio-box .title{height:1rem;line-height: 1rem;padding:0 .3rem;font-size: .3rem;}
 .train-audio-box{padding-bottom:.2rem;}
-.fixed-audio-box{position: fixed;top: 0;z-index: 999;background: #fff;margin: 0 auto;max-width: 750px;width: 100%;}
+.fixed-audio-box{position: fixed;top: 0;z-index: 999;margin: 0 auto;max-width: 750px;width: 100%;}
 .audio-box{width:6.8rem;box-shadow: 1px 1px 10px rgba(0,0,0,.2);margin:.2rem auto;border-radius: 4px;padding:.2rem .2rem .5rem;}
 .audio-box .audio-info{height:1rem;margin-bottom:.2rem;}
 .audio-box .playbtn:after{content: '\e673';color:#B71C2D;font-size: .6rem;}
