--- a/webroot/mobile/css/style.css
+++ b/webroot/mobile/css/style.css
@@ -62,7 +62,7 @@ outline:none;height:0.8rem;line-height: 0.78rem;}
 .mark-items .shows,.b-mark li span.active{max-height:999px;-webkit-transition:max-height .6s .1s ease-in;transition:max-height .6s .1s ease-in;}
 .mark-items .hide{max-height: 0;-webkit-transition: max-height .2s ease;transition:max-height .2s ease;}
 .nextstep,.s-btn{ display:block;text-align:center;height:0.78rem;width:80%;font-size:0.3rem;line-height:0.78rem;background: #b71c2d;color:#fff;margin:0 auto;margin-top:0.4rem;margin-bottom:0.4rem;border-radius:5px;}
-.f-bottom{position: fixed;width: 100%;height: 1rem;bottom: 0;border-radius: 0;color: #fff;
+.f-bottom,.f-bottom-call{position: fixed;width: 100%;height: 1rem;bottom: 0;border-radius: 0;color: #fff;
     font-size: 0.32rem;text-align: center;line-height: 1rem;background: #b71c2d;max-width: 750px;}
 .submited{background: #7A7E83;}
 .s-btn{margin:0.2rem auto;}
@@ -1536,3 +1536,14 @@ box-align:center;-webkit-box-align:center;}
 .charge-detail .left-info{color:#999;}
 .searchwraper{top:0;bottom:0;position:absolute;overflow-y:scroll;-webkit-overflow-scrolling: touch;max-width:750px;width:100%;margin:0 auto;}
 .searchwraper::-webkit-scrollbar{display:none;}
+
+.review-containner{padding-top:.9rem;}
+.review-containner h3{font-size: 1rem;height:1rem;}
+.review-containner .bold{font-weight: bold;color:#303030;}
+.review-containner .tip{margin-bottom:.8rem;}
+.review-containner .active-des-pass{margin-top:.4rem;color:#999;}
+.review-containner .activity-nopass-img{width:6.58rem;height:4.73rem;overflow: hidden;margin:0 auto;margin-top:3rem;}
+.review-containner .activity-nopass-img img{width:100%;height:auto;display: block;}
+.f-bottom-call{font-size: .26rem;}
+.f-bottom-call a{color:#fff;}
+.f-bottom-call i{display: inline-block;margin-top:-3px;vertical-align: top;}
