--- a/webroot/mobile/css/style.css
+++ b/webroot/mobile/css/style.css
@@ -1548,3 +1548,18 @@ box-align:center;-webkit-box-align:center;}
 .f-bottom-call{font-size: .26rem;}
 .f-bottom-call a{color:#fff;}
 .f-bottom-call i{display: inline-block;margin-top:-3px;vertical-align: top;}
+/*活动-多人行*/
+.activity-entroll-more{padding-bottom:.1rem;}
+.activity-entroll-more li{height:45px;}
+.activity-entroll-more .entroll-items{margin-right: .3rem;}
+.activity-entroll-more .outerblock li:last-of-type{border-bottom: 1px #efefef solid;}
+.activity-entroll-more .disabled{background: #ccc;}
+.activity-choosed-box .choosed-box-title{font-size: .28rem;color:#666;padding:0 .3rem;line-height: .36rem;}
+.activity-choosed-box .choosed-box-items{background: #fff;padding:.3rem 0 .3rem .3rem;margin-top: .2rem;}
+.activity-choosed-box .choosed-box-items .user-name{font-size:.32rem;color:#000;}
+.activity-choosed-box .chooseplace-info{margin-bottom:.3rem;line-height: .4rem;}
+.activity-choosed-box .chooseplace-info .r-info{padding:0 .3rem;color:#c2c2c2;}
+.activity-choosed-box .chooseplace-otherinfo{font-size: .28rem;line-height: .36rem;margin-top:.1rem;padding-right: .3rem;}
+.activity-choosed-box .chooseplace-info .r-info .iconfont{font-size: .36rem;}
+.activity-choosed-box .chooseplace-otherinfo .l-info{color:#666;margin-right: .2rem;}
+.activity-choosed-box .chooseplace-otherinfo .r-info{max-width: 5.8rem;}
